===============================================================================
Preliminary notes:
------------------
Mark "o": new feature
Mark "*": bug fixed.
Mark "!": change that can break compatibility with older version
===============================================================================

version 5.0.4 ????/??/??
========================
o support display:none
* fix line-break bug(double line-break).
* switch from float-generator to original parent generator if rest space is exhausted.

version 5.0.3 2014/08/05
=========================
o new interface 'Nehan.createPagedElement' is created. more abstract layer and easy to use.
o add plugin for gravator(nehan.gravator.js)
o add plugin(utility tag <pasted>)
* fix bug(updating selector value is failed when new value is object and old value is null).


version 5.0.2 2014/06/26
=========================
o regexp name selector is supported.
o to define custom single tag, add lexing-rule interfaces(setSingleTag, setSingleTagRex).
o enabled selector of multiple css classes like 'div.nehan-xxx.nehan-yyy.nehan-zzz'.
o enabled margin cancel.
o support 'auto' as 'table-layout'.
o support word-break property.
o add plugins directory.
o add plugins(font-awesome, speak, tip).
* eval unmanaged css props before store

version 5.0.1 2014/05/13
=========================
o now 'oncreate' property is enabled for selector value,
  called when layout is evaluated and dom element is created.
o global style interfaces Nehan.setStyle(or Nehan.setStyles) are added.
! now module UnitSize is included in StyleContext class.

version 5.0.0 2014/04/25
=========================
o more complex float supported, not only static size float, but also dynamic block element can be floated.
! callback argument for functional value and callback is changed,
  SelectorContext is for functional css value, and SelectorCallbackContext is for 'onload' callback.