@@ -47,12 +47,12 @@ var VertEvaluator = (function(){
   };
 
   VertEvaluator.prototype._evalWord = function(line, word){
-    if(Env.isTransformEnable){
-      if(Env.client.isTrident()){
+    if(Nehan.Env.isTransformEnable){
+      if(Nehan.Env.client.isTrident()){
 	return this._evalWordTransformTrident(line, word);
       }
       return this._evalWordTransform(line, word);
-    } else if(Env.client.isIE()){
+    } else if(Nehan.Env.client.isIE()){
       return this._evalWordIE(line, word);
     } else {
       return "";
@@ -99,9 +99,9 @@ var VertEvaluator = (function(){
   };
 
   VertEvaluator.prototype._evalRotateChar = function(line, chr){
-    if(Env.isTransformEnable){
+    if(Nehan.Env.isTransformEnable){
       return this._evalRotateCharTransform(line, chr);
-    } else if(Env.client.isIE()){
+    } else if(Nehan.Env.client.isIE()){
       return this._evalRotateCharIE(line, chr);
     } else {
       return this._evalCharWithBr(line, chr);
